// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`if instruction compiler > emits a float if block 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 2,
      "expectedResultTypes": [
        "float",
      ],
    },
  ],
  "byteCode": [
    4,
    125,
  ],
}
`;

exports[`if instruction compiler > emits a multi-result if block type index 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 2,
      "expectedResultTypes": [
        "int",
        "float",
      ],
    },
  ],
  "byteCode": [
    4,
    0,
  ],
  "typeCount": 1,
  "typeSignatures": [
    {
      "params": [],
      "results": [
        127,
        125,
      ],
      "typeIndex": 0,
    },
  ],
}
`;

exports[`if instruction compiler > emits a void if block when given no arguments 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 2,
      "expectedResultTypes": [],
    },
  ],
  "byteCode": [
    4,
    64,
  ],
}
`;

exports[`if instruction compiler > emits a void if block when the matching ifEnd declares no result 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 2,
      "expectedResultTypes": [],
    },
  ],
  "byteCode": [
    4,
    64,
  ],
}
`;

exports[`if instruction compiler > emits an int if block 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 2,
      "expectedResultTypes": [
        "int",
      ],
    },
  ],
  "byteCode": [
    4,
    127,
  ],
}
`;
